[gd_scene load_steps=5 format=2]

[ext_resource path="res://Pac-Man/Scripts/EscenaWinPacMan.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Outrun future.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 28
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "Mostrar"
tracks/0/type = "value"
tracks/0/path = NodePath("PopupGameOver:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="EscenaWinPacMan" type="Control"]
pause_mode = 2
script = ExtResource( 1 )

[node name="PopupGameOver" type="Popup" parent="."]
visible = true
margin_left = 288.0
margin_top = 192.0
margin_right = 608.0
margin_bottom = 416.0
size_flags_horizontal = 5
size_flags_vertical = 5

[node name="ColorRect" type="ColorRect" parent="PopupGameOver"]
modulate = Color( 1, 1, 1, 0.941176 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 48.0
margin_top = 64.0
margin_right = 48.0
margin_bottom = 64.0
color = Color( 0.0862745, 0.0823529, 0.0823529, 0.882353 )

[node name="VBoxContainer" type="VBoxContainer" parent="PopupGameOver/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 80.0
margin_bottom = -32.0
size_flags_horizontal = 5
size_flags_vertical = 5
custom_constants/separation = 40

[node name="Label" type="Label" parent="PopupGameOver/ColorRect/VBoxContainer"]
margin_right = 320.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 1 )
custom_constants/line_spacing = 0
text = "Â¡Has ganado!"
align = 1
valign = 1

[node name="AnimacionGameOver" type="AnimationPlayer" parent="."]
anims/Mostrar = SubResource( 2 )

[node name="TimerWin" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="TimerWin" to="." method="_on_TimerWin_timeout"]
